--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h2{
 	padding: 0 2%;
 }
 .s_app { 
-	background: url('shopest/mobile.png'); 
+	background: url('images/mobile.png'); 
 	background-position: 18% 100%;
     background-repeat: no-repeat;
     background-size: 30%;
