--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ h2{
 .four {
 	 background-image: url(https://images.pexels.com/photos/318236/pexels-photo-318236.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260
 );
-    min-height: 100%;
+    min-height: 500px;
 }
 .five {
 	background-image: url(https://images.pexels.com/photos/907673/pexels-photo-907673.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
