--- a/style.css
+++ b/style.css
@@ -151,6 +151,7 @@ padding: 10px;
 
 
 @media(max-width:568px) {
+	ul.navbar-nav {flex-direction: column;}
         .bg {background-attachment: scroll;}
 	.bg p {font-size: 1rem;}
 	.ptext .border {padding:5px; font-size: .8rem}
