--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h2{
 }
 
 .one {
-   background-image: url(https://images.pexels.com/photos/697059/pexels-photo-697059.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260
+   background-image: url(https://images.pexels.com/photos/994197/pexels-photo-994197.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
 );
     min-height: 100%;
 }
