--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h2{
      min-height: 500px;
 }
 .seven {
-	background-image:radial-gradient(rgba(0, 0, 0,.6),rgba(0, 0, 0,.9)),url(https://images.pexels.com/photos/994523/pexels-photo-994523.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260
+	background-image:radial-gradient(rgba(0, 0, 0,.6),rgba(0, 0, 0,.9)),url(https://scontent.fwaw5-1.fna.fbcdn.net/v/t31.0-8/23117003_870114689837125_6400449781366354841_o.jpg?_nc_cat=0&oh=9ebad54cdd5ea4d8d612277f40b01356&oe=5BA63EA2
 );
     min-height: 400px;
     color: #fff;
