--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h2{
 .seven {
 	background-image:url(https://scontent.fwaw5-1.fna.fbcdn.net/v/t31.0-8/23117003_870114689837125_6400449781366354841_o.jpg?_nc_cat=0&oh=9ebad54cdd5ea4d8d612277f40b01356&oe=5BA63EA2
 );
-    min-height: 400px;
+    min-height: 100%;
     color: #333;
 }
 .seven h3 { color: #333; border-bottom: 1px solid #333; display: inline-block; }
