--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html, body{
     font-weight: 400;
     line-height: 1.8rem;
     color: #111;
+	overflow-x:hidden;
 }
 ul.navbar-nav {
 	flex-direction: inherit;
