--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body{
     font-weight: 400;
     line-height: 1.8rem;
     color: #111;
-	overflow-x:hidden;
+	width: 100%;
 }
 ul.navbar-nav {
 	flex-direction: inherit;
