--- a/style.css
+++ b/style.css
@@ -129,6 +129,17 @@ h2{
     opacity: 0.7;
     transition: 1s ease;
 }
+.mtext{
+    position: absolute;
+    top: 20%;
+    width: 100%;
+    text-align: center;
+    color: #000;
+    font-size: 1.2rem;
+    letter-spacing: 8px;
+    text-transform: uppercase;
+    transition: 1s ease;
+}
 
 .ptext:hover{
     opacity: 0.9;    
