--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ h2{
 }
 
 .one {
-   background-image: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%),url(https://images.pexels.com/photos/994197/pexels-photo-994197.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
+   background-image: linear-gradient(90deg, rgba(131,58,180,.2) 0%, rgba(253,29,29,.2) 50%, rgba(252,176,69,.2) 100%),url(https://images.pexels.com/photos/994197/pexels-photo-994197.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
 );
     min-height: 100%;
 }
