--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ h2{
 	background-position: 18% 100%;
     background-repeat: no-repeat;
     background-size: 30%;
+	    overflow-x: hidden;
 }
 .m_app {
 	height: 500px;
@@ -111,6 +112,7 @@ h2{
     z-index:1;
 	text-align: center;
 	padding-top:50px;
+	    overflow-x: hidden;
 }
 .support img {
 	max-width: 100%;
