--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ h2{
 );
     min-height: 100%;
 }
-.one button {background: #000;color: #fff;text-transform: uppercase;}
+.one button {background: #000;color: #fff;text-transform: uppercase;z-index: 1;}
 .one button:hover { color: #000; background: #fff;}
 .two {
     background-image: url(https://images.pexels.com/photos/932402/pexels-photo-932402.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260
