--- a/style.css
+++ b/style.css
@@ -99,7 +99,8 @@ h2{
 	max-width: 100%;
 	padding: 0 2%;
 }
-.user_opinion img {max-width: 100%; border-radius: 50%; width: 100px; height: 100px;}
+.user_photo { width: 100px; height: 100px; overflow: hidden;}
+.user_opinion img {max-width: 100%; border-radius: 50%; }
 .s_app { 
 	background: url('images/mobile.png'); 
 	background-position: 18% 100%;
