--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ h2{
 	padding: 0 2%;
 }
 .user_photo { width: 100px; height: 100px; overflow: hidden;}
-.user_opinion img {max-width: 100%; border-radius: 50%; }
+.user_opinion img {max-width: 100%; border-radius: 50%; height: 100px; width: auto;}
 .s_app { 
 	background: url('images/mobile.png'); 
 	background-position: 18% 100%;
