--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ h2{
 	max-width: 100%;
 	padding: 0 2%;
 }
-.user_photo { width: 100px; height: 100px; overflow: hidden;}
-.user_opinion img {max-width: 100%; border-radius: 50%; height: 100px; width: auto;}
+.thumbnail { width: 100px; height: 100px; overflow: hidden;}
+.img-thumbnail {max-width: 100%; border-radius: 50%;}
 .s_app { 
 	background: url('images/mobile.png'); 
 	background-position: 18% 100%;
