--- a/style.css
+++ b/style.css
@@ -70,12 +70,11 @@ h2{
      min-height: 500px;
 }
 .six {
-	background-image: url(https://scontent.fwaw5-1.fna.fbcdn.net/v/t31.0-8/23117003_870114689837125_6400449781366354841_o.jpg?_nc_cat=0&oh=9ebad54cdd5ea4d8d612277f40b01356&oe=5BA63EA2
-);
+	background-image: url(https://images.pexels.com/photos/135620/pexels-photo-135620.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
      min-height: 500px;
 }
 .seven {
-	background-image:url(
+	background-image:url(https://scontent.fwaw5-1.fna.fbcdn.net/v/t31.0-8/23117003_870114689837125_6400449781366354841_o.jpg?_nc_cat=0&oh=9ebad54
 );
     min-height: 100%;
     color: #333;
