--- a/style.css
+++ b/style.css
@@ -70,12 +70,11 @@ h2{
      min-height: 500px;
 }
 .six {
-	background-image: url(https://images.pexels.com/photos/135620/pexels-photo-135620.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+	background-image: url(https://images.pexels.com/photos/905336/pexels-photo-905336.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
      min-height: 500px;
 }
 .seven {
-	background-image:url(https://scontent.fwaw5-1.fna.fbcdn.net/v/t31.0-8/23117003_870114689837125_6400449781366354841_o.jpg?_nc_cat=0&oh=9ebad54
-);
+	background-image:url(https://scontent.fwaw5-1.fna.fbcdn.net/v/t1.0-9/23032667_870114689837125_6400449781366354841_n.jpg?_nc_cat=0&oh=29aef38305d14915eb68dbd1e9ddb0cd&oe=5B9F866E);
     min-height: 100%;
     color: #333;
 }
