--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h2{
      min-height: 500px;
 }
 .seven {
-	background-image:url(https://scontent.fwaw5-1.fna.fbcdn.net/v/t1.0-9/23032667_870114689837125_6400449781366354841_n.jpg?_nc_cat=0&oh=29aef38305d14915eb68dbd1e9ddb0cd&oe=5B9F866E);
+	background-image:url(https://cdn.shopify.com/s/files/1/1715/6079/files/TCH8752-Edit-Edit_1024x1024.jpg?v=1522750768);
     min-height: 100%;
     color: #333;
 }
