--- a/style.css
+++ b/style.css
@@ -181,4 +181,5 @@ padding: 10px;
 	.section-light {padding: 5%;}
 	iframe {width: 100%;height: auto;}
 	.user_photo .thumbnail { width: 50px; height: 50px; margin: 50% auto;}
+	.s_app { background-position: 52% 100%;background-size: 50%;}
 }
